--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: "Minimalist Photo Gallery"
-description: "A simple Jekyll theme inspired by mutinamatyas-photo.com"
+title: "Fotograf Bořek Běhavý"
+description: "Fotograf Bořek Běhavý"
 baseurl: "" # Set if hosting in a subdirectory
 url: "" # Set your site url
 theme: null
